#0 | Correct the server instrumentation picture in the plan
The plan claimed avni-server had no APM, based on build.gradle declaring no
Micrometer, Actuator, OpenTelemetry, New Relic or Datadog. That is true of the
build but the conclusion was wrong: New Relic is already the APM, attached at
runtime as a javaagent. Every non-local environment carries it in
avni_server_opts, and avni-infra has a configure/roles/newrelic/ role.

F1 is therefore mostly configuration of a new environment rather than building
instrumentation. Records how each item is set from avni-infra group_vars via
avni_server_opts, which already carries -D Spring properties and a -javaagent:
pool size, log levels and GC logging need no avni-server change, and neither
does AVNI_IDP_TYPE for B1.

What does need avni-server code is narrower than stated: the F2.1 interceptor
remediation, and deleting avni-server/perf/gatling.

Notes the real gap - configure/group_vars/ has no perf or loadtest environment
file, so the configuration has nowhere to live yet.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017BEJTAjXbHnAVhcd863dfp